--- a/test/fixtures/default.html
+++ b/test/fixtures/default.html
@@ -1,6 +1,10 @@
 <form method="post" action="mailto:test@example.com" class="mailto-form">
   <input type="text" name="from" value="" title="User Email">
 
+  <input type="text" value="" title="Should not be included">
+
+  <input type="text" name="subject" value="Default value">
+
   <label for="message">Message Content:</label>
   <textarea name="message" id="message" cols="30" rows="10"></textarea>
 </form>
