--- a/test/fixtures/default.html
+++ b/test/fixtures/default.html
@@ -8,3 +8,9 @@
   <label for="message">Message Content:</label>
   <textarea name="message" id="message" cols="30" rows="10"></textarea>
 </form>
+
+<div class="expected-output" hidden="hidden">
+User Email:
+subject: Default value
+Message Content:
+</div>
