--- a/test/fixtures/smoke.html
+++ b/test/fixtures/smoke.html
@@ -28,7 +28,25 @@
   <textarea name="message" id="message" cols="30" rows="10"></textarea>
 
   <label>Do you agree with the TOS?
-    <input name="tos" type="radio" value="yes" id="tos-yes"> <label for="tos-yes">Yes, have my sould</label>
+    <input name="tos" type="radio" value="yes" id="tos-yes" required> <label for="tos-yes">Yes, have my sould</label>
     <input name="tos" type="radio" value="no" id="tos-no"> <label for="tos-no">No, let's be friends</label>
   </label>
 </form>
+
+<div class="content-template" hidden="hidden">
+Hello,
+
+I am a {{gender}} writing from {{from}} and located in {{country}}. I'd like to propose you a talk entitled {{subject}}.
+It could be done as {{format}} and is basically talking about:
+
+&gt; {{message}}
+</div>
+
+<div class="expected-output" hidden="hidden">
+Hello,
+
+I am a female writing from jane@doe.co.uk and located in uk. I'd like to propose you a talk entitled Men come from Venus, really.
+It could be done as keynote,lt and is basically talking about:
+
+&gt; Have some viagra for you people.
+</div>
