--- a/test/fixtures/smoke.html
+++ b/test/fixtures/smoke.html
@@ -1,4 +1,4 @@
-<form method="post" action="mailto:test@example.com" class="mailto-form">
+<form method="post" action="mailto:test@example.com" data-subject="Grabbed from data-uri" class="mailto-form">
   <input type="text" name="from" value="" title="User Email">
 
   <label>What is your gender?
