--- a/test/fixtures/default.html
+++ b/test/fixtures/default.html
@@ -3,7 +3,7 @@
 
   <input type="text" value="" title="Should not be included">
 
-  <input type="text" name="subject" value="Default value">
+  <input type="text" name="subject" id="subject" value="Default value">
 
   <label for="message">Message Content:</label>
   <textarea name="message" id="message" cols="30" rows="10"></textarea>
