--- a/test/fixtures/default.html
+++ b/test/fixtures/default.html
@@ -5,8 +5,9 @@
 
   <input type="text" name="subject" id="subject" value="Default value">
 
-  <label for="message">Message Content:</label>
-  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+  <label>Message Content:
+    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+  </label>
 </form>
 
 <div class="expected-output" hidden="hidden">
